[gd_scene load_steps=3 format=3 uid="uid://xiaoc43tp3t2"]

[ext_resource type="Script" path="res://scripts/level_up_menu.gd" id="1_vc0vw"]
[ext_resource type="Script" path="res://scripts/ButtonGrab.gd" id="2_eetba"]

[node name="LevelUpMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vc0vw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -470.0
offset_top = -173.0
offset_right = 470.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2

[node name="Choice1" type="Button" parent="Panel"]
offset_left = 210.0
offset_top = 40.0
offset_right = 360.0
offset_bottom = 307.0
script = ExtResource("2_eetba")

[node name="Choice2" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 395.0
offset_top = 40.0
offset_right = 545.0
offset_bottom = 307.0

[node name="Choice3" type="Button" parent="Panel"]
offset_left = 580.0
offset_top = 40.0
offset_right = 730.0
offset_bottom = 307.0

[connection signal="pressed" from="Panel/Choice1" to="." method="_on_choice_1_pressed"]
[connection signal="pressed" from="Panel/Choice2" to="." method="_on_choice_2_pressed"]
[connection signal="pressed" from="Panel/Choice3" to="." method="_on_choice_3_pressed"]
